# SAYA-Server

./: .gitignore  README.md
client/: CMakeLists.txt
client/src/: main.cpp
client/src/client/: Request.cpp  Request.hpp  http.cpp  http.hpp
public/website/: index.html
public/website/scripts/: script.js
public/website/styles/: style.css
server/: CMakeLists.txt  README.md
server/src/: main.cpp
server/src/crypt/: Crypt.cpp  Crypt.hpp
server/src/http/: Get.cpp  Get.hpp  HttpTypes.hpp  Post.hpp  Request.hpp  Response.hpp  http.cpp  http.hpp
server/src/http/request/: GetRq.cpp  GetRq.hpp  HttpTypes.hpp  PostRq.hpp  Request.hpp
server/src/http/response/: GetRes.cpp  GetRes.hpp  HttpTypes.hpp  Response.hpp
server/src/util/: Util.cpp  Util.hpp
server/src/websocket/: WebSocket.cpp  WebSocket.hpp  WebSocketFrame.hpp
server/website/: index.html
